bk_ida/gccida/c3/optimize_sibling_and_tail_recursive_calls
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1073:4: error: expected ';' after expression
rtx v37; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1073:5: error: use of undeclared identifier 'v37'
rtx v37; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1075:4: error: expected ';' after expression
rtx v39; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1075:5: error: use of undeclared identifier 'v39'
rtx v39; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1076:4: error: expected ';' after expression
rtx v40; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1076:5: error: use of undeclared identifier 'v40'
rtx v40; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1077:4: error: expected ';' after expression
rtx v41; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1077:5: error: use of undeclared identifier 'v41'
rtx v41; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1080:4: error: expected ';' after expression
rtx v44; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1080:5: error: use of undeclared identifier 'v44'
rtx v44; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1083:4: error: expected ';' after expression
rtx v47; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1083:5: error: use of undeclared identifier 'v47'
rtx v47; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1084:4: error: expected ';' after expression
rtx v48; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1084:5: error: use of undeclared identifier 'v48'
rtx v48; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1088:4: error: expected ';' after expression
rtx v52; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1088:5: error: use of undeclared identifier 'v52'
rtx v52; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1089:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1089:5: error: use of undeclared identifier 'v53'
rtx v53; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1091:4: error: expected ';' after expression
rtx v55; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_sibling_and_tail_recursive_calls/src/obj/sibcall.o] Error 1
